testing/traefik/traefik-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: testing

spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: web
    - protocol: TCP
      name: admin
      port: 8080
      targetPort: admin
    - protocol: TCP
      name: websecure
      port: 443
      targetPort: websecure
  selector:
    app: traefik
  externalIPs:
    - 207.244.253.163
