testing/traefik/traefik-ingressRoutes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: apps
  namespace: testing
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: myresolver
  # -------------------------------------------------------------
  #                         ROUTES
  # -------------------------------------------------------------
  routes:
    # website
    - match: Host(`pocketcoach.nvim.live`)
      kind: Rule
      services:
        - name: website
          port: 80

    # redirect wwww
    - match: Host(`www.pocketcoach.nvim.live`)
      kind: Rule
      middlewares:
        - name: www-to-https
      services:
        - name: whoami
          port: 80

    # funnel-frontend
    - match: Host(`pocketcoach.nvim.live`) && PathPrefix(`/promo`)
      kind: Rule
      middlewares:
        - name: strip-prefix-funnel-frontend
      services:
        - name: funnel-frontend
          port: 80

    # admin-panel-1 API
    - match: Host(`pocketcoach.nvim.live`) && PathPrefix(`/strapi`)
      kind: Rule
      middlewares:
        - name: strip-prefix-admin-panel-1
      services:
        - name: admin-panel-1
          port: 80

    # admin-panel-1 DASHBOARD
    - match: Host(`pocketcoach.nvim.live`) && PathPrefix(`/admin`)
      kind: Rule
      middlewares:
        - name: strip-prefix-admin-panel-1
      services:
        - name: admin-panel-1
          port: 80

    # admin-panel-2 API
    - match: Host(`pocketcoach.nvim.live`) && PathPrefix(`/secure`)
      kind: Rule
      middlewares:
        - name: strip-prefix-admin-panel-2
      services:
        - name: admin-panel-2
          port: 80

    # food-frontend
    - match: Host(`app.pocketcoach.nvim.live`)
      kind: Rule
      services:
        - name: food-frontend
          port: 80

    # food-backend
    - match: Host(`api.pocketcoach.nvim.live`) && PathPrefix(`/food`)
      kind: Rule
      services:
        - name: food-backend
          port: 80

    # clients-data-api
    - match: Host(`api.pocketcoach.nvim.live`) && PathPrefix(`/clients`)
      kind: Rule
      services:
        - name: clients-data-api
          port: 80

    # clients-data-api TEMPORAL
    - match: Host(`demo.pocketcoach.nvim.live`) && PathPrefix(`/clients`)
      kind: Rule
      services:
        - name: clients-data-api
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: www-to-https
  namespace: testing

spec:
  redirectRegex:
    regex: '^https?://(?:www\.)?(.+)'
    replacement: "https://${1}"
    permanent: true

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix-funnel-frontend
  namespace: testing
spec:
  stripPrefix:
    prefixes:
      - "/promo"
    forceSlash: false

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix-admin-panel-1
  namespace: testing
spec:
  stripPrefix:
    prefixes:
      - "/strapi"
    forceSlash: false

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix-food-backend
  namespace: testing
spec:
  stripPrefix:
    prefixes:
      - "/food"
    forceSlash: false

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix-admin-panel-2
  namespace: testing
spec:
  stripPrefix:
    prefixes:
      - "/secure"
    forceSlash: false
